--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tsndr/cloudflare-worker-jwt": "^2.2.2",
     "bootstrap-icons": "^1.11.3",
+    "file-saver": "^2.0.5",
     "flowbite-react": "^0.9.0",
     "jose": "^5.4.0",
     "js-cookie": "^3.0.5",
@@ -24,7 +25,8 @@
     "react-qr-code": "^2.0.14",
     "react-select": "^5.8.0",
     "react-switch": "^7.0.0",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "postcss": "^8",
